# VerifiedCatenableDeque

./: .gitignore  AUTHORS.md  LICENSE  Makefile  README.md  TODO.md  _CoqProject  cadeque.ml  cadeque.mli  dune  dune-project
BinCounting/: core.ml  core.v  dune
Cadeque/: buffer.v  core.ml  core.v  deque.v  deque_lvl.v  deque_size.v  dune  makeCore.ml  models.v  operations.v  package.ml  types.v
Color/: GYOR.v  color.ml  color.v  dune
Deque/: core.ml  core.v  core_v0.v  core_v0_base.v  core_v1.v  core_v2.v  dune  package.ml
Extraction/: Classes.ml  Datatypes.mli  GYOR.ml  GYR.ml  List.mli  Nat.ml  PeanoNat.mli  README.md  Specif.mli  buffer.ml  core.ml  core.mli  deque.mli  dune  models.ml  models.mli  operations.ml  operations.mli  types.ml
ListLike/: dune  make.ml
attic/: Abstraction.v
bench/: FixedCapacityVector.ml  Makefile  PriorityQueue.ml  PriorityQueue.mli  README.md  append.ml  base.ml  benchmark.ml  concat.ml  database.ml  dune  eject.ml  graphics.ipynb  inject.ml  listLike.ml  make_bench.ml  measure.ml  modules.ml  pop.ml  push.ml  rdbench.ml
bench/tmp/: data_append.txt  data_concat.txt  data_eject.txt  data_inject.txt  data_pop.txt  data_push.txt  plot_append.gnu  plot_concat.gnu  plot_eject.gnu  plot_inject.gnu  plot_pop.gnu  plot_push.gnu
extraction/: Extraction.v  dune
lib/: binCounting.ml  cadeque.ml  cadeque_core.ml  deque.ml  deques.ml  deques.mli  dune  listLike.ml  steque.ml  steque_core.ml
lib/binCounting/: core.ml
lib/cadeque/: core.ml  makeCore.ml  package.ml
lib/color/: GYOR.ml  GYR.ml
lib/deque/: core.ml  package.ml
lib/pairBuffers/: core.ml  package.ml
lib/steque/: core.ml  makeCore.ml  package.ml
minibenchmark/: Makefile  README.md
minibenchmark/deques/: dune  main.ml
minibenchmark/deques_extracted/: dune  main.ml
src/: cadeque.ml  cadeque.mli  dune
test/: cadeque_test.ml  deque_test.ml  dune  listLike_test.ml  pairBuffers_test.ml  steque_test.ml
test_coq/: cadeque.v  check_axioms.v  deque.v  dune  steque.v
test_coq/reduction/: cadeque.v  deque.v  dune  steque.v
test_monolith/: Makefile  dune  test_cadeque.ml  test_cadeque_extracted.ml  test_deque.ml  test_steque.ml
test_monolith/support/: dune  reference.ml  specs.ml
test_rocq/reduction/: cadeque.v  deque.v  dune  steque.v
theory/: Signatures.v  dune
theory/BinCounting/: Core.v  CoreSimplyTyped.v
theory/Cadeque/: Abstraction.v  Cadeque.v  Core.v  Models.v  Operations.v  Summary.v  Types.v
theory/Color/: GYOR.v  GYR.v
theory/Deque/: Deque.v  DequeSimplyTyped.v  Deque_lvl.v  Deque_plain.v
theory/Steque/: Steque.v
theory/Utils/: comp_eq.v
theory/binCounting/: core.v
theory/cadeque/: abstraction.v  buffer.v  core.v  deque.v  deque_lvl.v  deque_size.v  equtil.v  mini.v  models.v  operations.v  types.v  vector.v
theory/color/: GYOR.v  GYR.v
theory/deque/: core.v  deque.v  deque_lvl.v  deque_plain.v  deque_size.v
theory/extraction/: Datatypes.ml  List.ml  Nat.mli  PeanoNat.ml  buffer.mli  core.ml  core.mli  deque.ml  dune
theory/steque/: core.v  deque.v  deque_lvl.v  steque.v
theory/test/: cadeque.v  deque.v  steque.v
