(coq.extraction
  (prelude Extraction)
  (extracted_modules
    Datatypes Classes Nat EqDec PeanoNat
    GYR GYOR
    Deque Deque_lvl Deque_plain
    Steque
    core types operations
  )
  (flags -w -extraction-default-directory
     -w -extraction-opaque-accessed)
  (theories Deques Equations Hammer AAC_tactics))

 (library
   (name deques_extraction)
   (flags -w -unused-var -w -ignored-extra-argument))
